Fix member page image alignments

--- a/monowar.css
+++ b/monowar.css
@@ -153,6 +153,7 @@ img.right {
   color: #ffffff;
 
 }
+
 .navigation ul {
   display: flex;
 }
@@ -181,7 +182,7 @@ img.right {
   color: #ffffff;
 }
 
-.navigation > li > a {
+.navigation>li>a {
   height: 100%;
 }
 
@@ -478,7 +479,7 @@ img.right {
   width: 200px;
 }
 
-.bio > div {
+.bio>div {
   width: 290px;
   text-align: flex;
   line-height: 15px;
@@ -489,11 +490,11 @@ img.right {
   width: 350px;
 }
 
-#affiliation > li {
+#affiliation>li {
   padding: 0 0 5px 0;
 }
 
-#external_links > li {
+#external_links>li {
   padding: 0 0 5px 0;
 }
 
@@ -525,14 +526,16 @@ h3.content_separation {
   border-style: solid;
   border-width: 0 0 1px 0;
   color: #666;
-  border-color: #aaa;;
+  border-color: #aaa;
+  ;
 
 }
 
-#recent_news > ul {
+#recent_news>ul {
   padding-left: 50px;
 }
-#recent_news > ul > li {
+
+#recent_news>ul>li {
   padding: 0 0 5px 0;
 }
 
@@ -542,7 +545,8 @@ h3.content_separation {
   justify-content: center;
   align-items: center;
 }
-#alumni-worked > a {
+
+#alumni-worked>a {
   margin: -10px 15px 0px 15px;
 }
 
@@ -552,17 +556,18 @@ h3.content_separation {
   display: flex;
 }
 
-#funded-by > div{
+#funded-by>div {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  
+
 }
 
-.profile_sections > ul{
+.profile_sections>ul {
   margin-left: 50px;
 }
-.profile_sections > ul > li{
+
+.profile_sections>ul>li {
   padding: 0 0 5px 0;
 }
 
@@ -578,10 +583,11 @@ h3.content_separation {
   padding-bottom: 25px;
 }
 
-.profile_sections > ol{
+.profile_sections>ol {
   margin-left: 30px;
 }
-.profile_sections > ol > li{
+
+.profile_sections>ol>li {
   padding: 0 0 5px 0;
 }
 
@@ -615,7 +621,8 @@ h3.content_separation {
   margin: 25% auto;
   padding: 20px;
   width: 60%;
-  border-radius: 10px; /* Rounded corners */
+  border-radius: 10px;
+  /* Rounded corners */
   text-align: left;
   font-size: 13px;
 }
@@ -636,4 +643,37 @@ h3.content_separation {
 
 .publication-item {
   cursor: pointer;
+}
+
+
+/* Member page CSS */
+.member-container {
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.member-column {
+  flex: 1;
+  max-width: 300px;
+  text-align: center;
+}
+
+.member-person {
+  margin-bottom: 20px;
+}
+
+.member-person img {
+  width: 160px;
+  height: 160px;
+  border: 0;
+}
+
+.member-h3 {
+  margin-bottom: 10px;
+}
+
+.member-p {
+  font-size: 100%;
 }
